# iflow-prompt-creator

./: .cfignore  .env.example  .gitignore  CLAUDE.md  README.md  dev.ps1  logs.txt  main.py  manifest.yml  pyproject.toml  requirements.txt
app/monitoring/: llm_monitor.py
app/routers/: chat.py  prompt.py
app/services/: aicore.py  embedder.py  extractor.py  hubsearch.py  validator.py  vectorstore.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: Chat.jsx  Chat.module.css  DiagramOutput.jsx  DiagramOutput.module.css  ExportMenu.jsx  ExportMenu.module.css  FileUpload.jsx  FileUpload.module.css  FlowDetail.jsx  FlowDetail.module.css  FlowDiscovery.jsx  FlowDiscovery.module.css  HelpModal.jsx  HelpModal.module.css  InstructionsOutput.jsx  InstructionsOutput.module.css  MultiPromptOutput.jsx  MultiPromptOutput.module.css  ProgressSteps.jsx  ProgressSteps.module.css  PromptOutput.jsx  PromptOutput.module.css  Toast.jsx  Toast.module.css  VisualisePanel.jsx  VisualisePanel.module.css  dirBadge.js
frontend/src/hooks/: useToast.js
frontend/src/utils/: exportUtils.js  renderMarkdown.jsx
utils/: destination_resolver.py
