[project]
name = "ifs-prompt"
version = "0.1.0"
description = "SAP CPI iFlow prompt generator from uploaded documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pymupdf>=1.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
